# esbot

./: .gitignore  Dockerfile  Gruppe J,J,B,L GitHubLink.md  MigrationCommands.ps1  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-jmeter.sh  post-create.sh
.github/workflow/: ai-detection.yaml
.github/workflows/: ci.yml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
EsBot-Server/: .gitignore  Directory.Build.props  Directory.Packages.props  Project.sln
EsBot-Server/API.Application/: API.Application.csproj  (+1 more)
EsBot.Server/: EsBot.Server.sln  global.json
backend/: .env.example  README.md  full_test_suite.py  locustfile.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  ai_provider.py  ai_stubs.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/schemas/: message.py  quiz.py  session.py
backend/app/api/v1/: health.py  messages.py  quiz.py  router.py  sessions.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: enums.py  models.py
backend/app/models/: evaluation_result.py  message.py  quiz_item.py  quiz_request.py  submitted_answer.py  user_session.py
backend/app/repositories/: __init__.py  message_repository.py  quiz_repository.py  session_repository.py
backend/app/routes/: sessions.py
backend/app/services/: chat_service.py  quiz_service.py
backend/app/services/llm/: client.py  factory.py  litellm_adapter.py  mock.py
backend/docs/: api-testing.md  esbot-api.postman_collection.json  setup.md
backend/features/: ai_failure_handling.feature  ask_question.feature  environment.py  quiz_generation.feature
backend/features/steps/: ai_failure_handling_steps.py  ask_question_steps.py  quiz_generation_steps.py
backend/performance/: .gitignore  README.md
backend/performance/gatling/: pom.xml  run-load.sh  run-smoke.sh  run-stress.sh
backend/performance/gatling/src/test/java/esbot/: ESBotAPISimulation.java  ESBotLoadSimulation.java  ESBotSmokeSimulation.java  ESBotStressSimulation.java
backend/performance/jmeter/: esbot-load-test.jmx  esbot-smoke-test.jmx  esbot-stress-test.jmx  jmeter-env.sh  run-load.sh  run-smoke.sh  run-stress.sh  user.properties
backend/performance/openapi/: esbot-api.yaml
backend/performance/scripts/: start-api-for-perf.sh
backend/tests/: __init__.py  conftest.py  test_api_workflow.sh  test_chat_service.py  test_evaluation_result.py  test_message.py  test_quiz_item.py  test_quiz_request.py  test_session_repository.py  test_smoke.py  test_submitted_answer.py  test_user_session.py
backend/tests/contract/: test_openapi.py
backend/tests/integration/api/: test_messages_api.py  test_quiz_api.py  test_sessions_api.py
backend/tests/integration/repositories/: test_session_repository.py
backend/tests/performance/: test_api_performance.py
backend/tests/unit/domain/: test_message.py  test_quiz.py  test_user_session.py
backend/tests/unit/services/: test_chat_service.py  test_quiz_service.py
doc/: organisation.md  tech-stack.md
docs/: esbot.md  setup.md  tech-stack.md
frontend/: .env.example  .gitignore  README.md  cypress.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
scripts/: ai-gate.sh
(+164 files in other folders)
