[project]
name = "esbot-backend"
version = "0.1.0"
description = "ESBot backend – FastAPI + PostgreSQL"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "radon>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "behave>=1.2.6",
    "bandit>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests", "features"]
skips = ["B101", "B104"]   # B101: assert in tests (excluded anyway); B104: host=0.0.0.0 is expected in dev/container setup

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.radon]
cc_min = "B"
show_complexity = true
order = "SCORE"
