[project]
name = "esbot-backend"
version = "0.1.0"
description = "ESBot FastAPI backend - AI-powered learning assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "litellm>=1.55.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "testcontainers[postgres]>=4.9.0",
    "schemathesis>=3.38.0",
    "pytest-benchmark>=5.1.0",
    "pip-audit>=2.7.0",
    "locust>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests without external services",
    "integration: Integration tests with database or API client",
    "contract: OpenAPI contract tests (optional, skipped in default CI)",
    "performance: Performance and load tests (optional, skipped in default CI)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
exclude = ["locustfile.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
